--- a/main.ipynb
+++ b/main.ipynb
@@ -60,10 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "source": [
-    "upload_url = \"https://ballchasing.com/api/v2/upload?visibility=public&group=\"# + group_link\r\n",
-    "get_group_url = \"https://ballchasing.com/api/replays/?group=23_aug-5o00103ovf\"# + group_link\r\n",
+    "upload_url = \"https://ballchasing.com/api/v2/upload?visibility=public&group=21_aug-2upgrsk4ns\"# + group_link\r\n",
+    "get_group_url = \"https://ballchasing.com/api/replays/?group=21_aug-2upgrsk4ns\"# + group_link\r\n",
     "\r\n",
     "get_group_url, upload_url"
    ],
@@ -72,19 +72,19 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "('https://ballchasing.com/api/replays/?group=23_aug-5o00103ovf',\n",
-       " 'https://ballchasing.com/api/v2/upload?visibility=public&group=')"
+       "('https://ballchasing.com/api/replays/?group=21_aug-2upgrsk4ns',\n",
+       " 'https://ballchasing.com/api/v2/upload?visibility=public&group=21_aug-2upgrsk4ns')"
       ]
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "source": [
     "def upload(path, token):\r\n",
     "    files = {'file': open(path, 'rb')}\r\n",
@@ -106,17 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "source": [
-    "# for f in glob.glob('files/23_Aug/*'):\r\n",
-    "#     upload(f, token)"
+    "for f in glob.glob('files/21_Aug/new/*'):\r\n",
+    "    upload(f, token)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "source": [
     "data = requests.get(get_group_url, headers={\r\n",
     "                    'Authorization': token})"
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "source": [
     "data"
    ],
@@ -139,14 +139,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "source": [
     "linkat = []\r\n",
     "for i in json.loads(data.text)['list']:\r\n",
@@ -237,9 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "source": [
-    "with open('23_aug.json', 'w') as f:\r\n",
+    "with open('21_aug.json', 'w') as f:\r\n",
     "    json.dump({'matches' : matchat}, f)"
    ],
    "outputs": [],
