--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "source": [
     "import json\r\n",
     "import glob\r\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "source": [
     "matches = []\r\n",
     "\r\n",
@@ -49,14 +49,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 2
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "source": [
     "player_data = []\r\n",
     "\r\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "source": [
     "data = pd.DataFrame(data=player_data, columns=player_data[0].keys())\r\n",
     "data.head(5)"
@@ -104,6 +104,35 @@
     {
      "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "        name platform                                id  team_name car_name  \\\n",
+       "0    MrWeza7     epic  1bc6c6733f0d423785729728aa04f8b4      MANGA   Fennec   \n",
+       "1   ak559ram      ps4                          ak559ram      MANGA   Octane   \n",
+       "2  TR BeShOy     epic  fc1a9af1c0b9488fb678a07b79392cad      MANGA   Octane   \n",
+       "3        3R7    steam                 76561198808310871  BABABOOEY   Octane   \n",
+       "4       Omar    steam                 76561198274220626  BABABOOEY   Octane   \n",
+       "\n",
+       "   avg_speed  total_distance  shots  shots_against  goals  goals_against  \\\n",
+       "0       1394          463087      2              5      1              4   \n",
+       "1       1557          517195      1              5      0              4   \n",
+       "2       1562          519549      3              5      0              4   \n",
+       "3       1438          480490      2              6      2              1   \n",
+       "4       1667          551014      2              6      1              1   \n",
+       "\n",
+       "   saves  assists  score    mvp  shooting_percentage  demos_inflicted  \\\n",
+       "0      0        0    218  False                 50.0                0   \n",
+       "1      0        0    190  False                  0.0                0   \n",
+       "2      0        1    178  False                  0.0                4   \n",
+       "3      2        1    479   True                100.0                0   \n",
+       "4      1        1    364  False                 50.0                2   \n",
+       "\n",
+       "   demos_taken  \n",
+       "0            0  \n",
+       "1            1  \n",
+       "2            1  \n",
+       "3            1  \n",
+       "4            2  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -252,55 +281,26 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "        name platform                                id  team_name car_name  \\\n",
-       "0    MrWeza7     epic  1bc6c6733f0d423785729728aa04f8b4      MANGA   Fennec   \n",
-       "1   ak559ram      ps4                          ak559ram      MANGA   Octane   \n",
-       "2  TR BeShOy     epic  fc1a9af1c0b9488fb678a07b79392cad      MANGA   Octane   \n",
-       "3        3R7    steam                 76561198808310871  BABABOOEY   Octane   \n",
-       "4       Omar    steam                 76561198274220626  BABABOOEY   Octane   \n",
-       "\n",
-       "   avg_speed  total_distance  shots  shots_against  goals  goals_against  \\\n",
-       "0       1394          463087      2              5      1              4   \n",
-       "1       1557          517195      1              5      0              4   \n",
-       "2       1562          519549      3              5      0              4   \n",
-       "3       1438          480490      2              6      2              1   \n",
-       "4       1667          551014      2              6      1              1   \n",
-       "\n",
-       "   saves  assists  score    mvp  shooting_percentage  demos_inflicted  \\\n",
-       "0      0        0    218  False                 50.0                0   \n",
-       "1      0        0    190  False                  0.0                0   \n",
-       "2      0        1    178  False                  0.0                4   \n",
-       "3      2        1    479   True                100.0                0   \n",
-       "4      1        1    364  False                 50.0                2   \n",
-       "\n",
-       "   demos_taken  \n",
-       "0            0  \n",
-       "1            1  \n",
-       "2            1  \n",
-       "3            1  \n",
-       "4            2  "
       ]
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "source": [
-    "data.to_csv('stats.csv')"
+    "data.to_csv('stats.csv', index=False)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "source": [
     "data.groupby(by='name')['goals'].sum().sort_values(ascending=False)"
    ],
@@ -310,54 +310,54 @@
      "data": {
       "text/plain": [
        "name\n",
+       "Snsb                8\n",
        "Saitama.            8\n",
        "u are noob          7\n",
+       "Olwan365            6\n",
        "Evo.                6\n",
        "Karim Benzema       6\n",
-       "Olwan365            6\n",
        "Blaster.isbanned    5\n",
        "LIGHT               5\n",
-       "Omar                4\n",
        "6J6O6K6E6R6         4\n",
        "Vertzoz             4\n",
        "SpeedTouch          4\n",
+       "Omar                4\n",
        "Dumb                3\n",
        "rfkill              3\n",
        "N O T E.            3\n",
+       "NotCrabz            3\n",
        "LakzInASlump        3\n",
        "3R7                 3\n",
-       "Natio2001           2\n",
-       "MrWeza7             2\n",
-       "AJ                  2\n",
-       "V                   2\n",
-       "Jasminea_           2\n",
-       "Chevoux             2\n",
+       "ToxicPrison         3\n",
        "Haithomianzz        2\n",
-       "Snsb                2\n",
+       "AJ                  2\n",
+       "Amar                2\n",
+       "Chevoux             2\n",
+       "Natio2001           2\n",
        "Gareth Bale         2\n",
-       "ak559ram            1\n",
+       "MrWeza7             2\n",
+       "Jasminea_           2\n",
+       "V                   2\n",
+       "S7vB                1\n",
        "aymaanfawzy         1\n",
        "ABDOx5OD            1\n",
-       "Amar                1\n",
-       "ancient rl          1\n",
-       "Bsharp              1\n",
-       "S7vB                1\n",
        "Freezee4ever        1\n",
-       "I3bdoGX             1\n",
        "Syco-Smsm           1\n",
-       "XtratoS             0\n",
-       "Hazem               0\n",
+       "ak559ram            1\n",
+       "I3bdoGX             1\n",
+       "Bsharp              1\n",
+       "ancient rl          1\n",
        "IAMOn_Fir3          0\n",
        "Bardrick916         0\n",
-       "ToxicPrison         0\n",
-       "TR BeShOy           0\n",
-       "NotCrabz            0\n",
+       "XtratoS             0\n",
        "Get Schwifty97      0\n",
+       "Hazem               0\n",
+       "TR BeShOy           0\n",
        "Name: goals, dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 62
+     "execution_count": 6
     }
    ],
    "metadata": {}
@@ -372,6 +372,61 @@
     {
      "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "                 name platform                                id  \\\n",
+       "97           Saitama.    steam                 76561198345081954   \n",
+       "12         u are noob    steam                 76561198452996823   \n",
+       "45   Blaster.isbanned     epic  9a992165c2364f1a883b10fc5327da98   \n",
+       "30         u are noob    steam                 76561198452996823   \n",
+       "24               Evo.    steam                 76561198357616630   \n",
+       "..                ...      ...                               ...   \n",
+       "59                3R7    steam                 76561198808310871   \n",
+       "58            I3bdoGX    steam                 76561198825245008   \n",
+       "56            MrWeza7     epic  1bc6c6733f0d423785729728aa04f8b4   \n",
+       "55           ak559ram      ps4                          ak559ram   \n",
+       "132         Jasminea_     epic  62d668b48e834a7caaabeac87660117f   \n",
+       "\n",
+       "         team_name car_name  avg_speed  total_distance  shots  shots_against  \\\n",
+       "97   TRIPLE THREAT   Octane       1535          525945      6              4   \n",
+       "12            GROG   Fennec       1553          522801      5              5   \n",
+       "45             BBL   Octane       1562          684192      9              6   \n",
+       "30            GROG   Fennec       1557          489421      5              6   \n",
+       "24        MANSOURA   Fennec       1479          466118      3              3   \n",
+       "..             ...      ...        ...             ...    ...            ...   \n",
+       "59       BABABOOEY   Octane       1430          442227      2              5   \n",
+       "58       BABABOOEY   Octane       1526          474482      1              5   \n",
+       "56           MANGA   Fennec       1260          389871      1              7   \n",
+       "55           MANGA   Octane       1504          469371      3              7   \n",
+       "132         WHITES   Octane       1486          471314      1              9   \n",
+       "\n",
+       "     goals  goals_against  saves  assists  score    mvp  shooting_percentage  \\\n",
+       "97       6              1      0        0    868   True           100.000000   \n",
+       "12       3              2      0        0    499   True            60.000000   \n",
+       "45       2              4      1        1    634   True            22.222221   \n",
+       "30       2              0      1        0    432   True            40.000000   \n",
+       "24       2              0      0        0    472   True            66.666664   \n",
+       "..     ...            ...    ...      ...    ...    ...                  ...   \n",
+       "59       0              0      0        1    184  False             0.000000   \n",
+       "58       0              0      2        0    206  False             0.000000   \n",
+       "56       0              1      0        0    230  False             0.000000   \n",
+       "55       0              1      2        0    362  False             0.000000   \n",
+       "132      0              2      1        1    220  False             0.000000   \n",
+       "\n",
+       "     demos_inflicted  demos_taken  \n",
+       "97                 0            1  \n",
+       "12                 0            0  \n",
+       "45                 1            0  \n",
+       "30                 1            0  \n",
+       "24                 0            1  \n",
+       "..               ...          ...  \n",
+       "59                 1            0  \n",
+       "58                 0            0  \n",
+       "56                 0            0  \n",
+       "55                 0            0  \n",
+       "132                0            0  \n",
+       "\n",
+       "[133 rows x 18 columns]"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -647,61 +702,6 @@
        "</table>\n",
        "<p>133 rows × 18 columns</p>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "                 name platform                                id  \\\n",
-       "97           Saitama.    steam                 76561198345081954   \n",
-       "12         u are noob    steam                 76561198452996823   \n",
-       "45   Blaster.isbanned     epic  9a992165c2364f1a883b10fc5327da98   \n",
-       "30         u are noob    steam                 76561198452996823   \n",
-       "24               Evo.    steam                 76561198357616630   \n",
-       "..                ...      ...                               ...   \n",
-       "59                3R7    steam                 76561198808310871   \n",
-       "58            I3bdoGX    steam                 76561198825245008   \n",
-       "56            MrWeza7     epic  1bc6c6733f0d423785729728aa04f8b4   \n",
-       "55           ak559ram      ps4                          ak559ram   \n",
-       "132         Jasminea_     epic  62d668b48e834a7caaabeac87660117f   \n",
-       "\n",
-       "         team_name car_name  avg_speed  total_distance  shots  shots_against  \\\n",
-       "97   TRIPLE THREAT   Octane       1535          525945      6              4   \n",
-       "12            GROG   Fennec       1553          522801      5              5   \n",
-       "45             BBL   Octane       1562          684192      9              6   \n",
-       "30            GROG   Fennec       1557          489421      5              6   \n",
-       "24        MANSOURA   Fennec       1479          466118      3              3   \n",
-       "..             ...      ...        ...             ...    ...            ...   \n",
-       "59       BABABOOEY   Octane       1430          442227      2              5   \n",
-       "58       BABABOOEY   Octane       1526          474482      1              5   \n",
-       "56           MANGA   Fennec       1260          389871      1              7   \n",
-       "55           MANGA   Octane       1504          469371      3              7   \n",
-       "132         WHITES   Octane       1486          471314      1              9   \n",
-       "\n",
-       "     goals  goals_against  saves  assists  score    mvp  shooting_percentage  \\\n",
-       "97       6              1      0        0    868   True           100.000000   \n",
-       "12       3              2      0        0    499   True            60.000000   \n",
-       "45       2              4      1        1    634   True            22.222221   \n",
-       "30       2              0      1        0    432   True            40.000000   \n",
-       "24       2              0      0        0    472   True            66.666664   \n",
-       "..     ...            ...    ...      ...    ...    ...                  ...   \n",
-       "59       0              0      0        1    184  False             0.000000   \n",
-       "58       0              0      2        0    206  False             0.000000   \n",
-       "56       0              1      0        0    230  False             0.000000   \n",
-       "55       0              1      2        0    362  False             0.000000   \n",
-       "132      0              2      1        1    220  False             0.000000   \n",
-       "\n",
-       "     demos_inflicted  demos_taken  \n",
-       "97                 0            1  \n",
-       "12                 0            0  \n",
-       "45                 1            0  \n",
-       "30                 1            0  \n",
-       "24                 0            1  \n",
-       "..               ...          ...  \n",
-       "59                 1            0  \n",
-       "58                 0            0  \n",
-       "56                 0            0  \n",
-       "55                 0            0  \n",
-       "132                0            0  \n",
-       "\n",
-       "[133 rows x 18 columns]"
       ]
      },
      "metadata": {},
